2007-07-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/combiners/switch/switch.py
	  (Switch.switch_to_for_event, Switch.switch_to_cb):
	switch_to can return a deferred or a boolean, so callback
	on a maybeDeferred. Fixes pychecker warning of comparing to
	False.

2007-07-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/combiners/switch/patternswitch.py
	  (PatternEventSwitcher.checkConfig):
	Fix typo.

2007-07-04  Andy Wingo  <wingo@pobox.com>

	* flumotion/common/fxml.py (Parser.checkAttributes): Remove
	unnecessary call to str().
	(Parser.parseAttributes): Don't call str() always; instead allow
	the caller to decide, while defaulting to the existing behavior.
	Fixes #661.

2007-07-04  Arek Korbik  <arkadini@gmail.com>

	* flumotion/component/combiners/switch/switch.xml:
	Fix misnamed dependency.

2007-07-03  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/admin/admin.py (AdminModel.connection_failed):
	connection_failed was being passed 3 arguments all the time,
	so make it take 3!

2007-07-03  Michael Smith <msmith@fluendo.com>

	* flumotion/common/config.py:
	* flumotion/component/feedcomponent010.py:
	  Change comment to not say that <source> is deprecated. It's not.
	* flumotion/test/test_config.py:
	  <source> has not been deprecated, rename test methods for clarity.

2007-07-03  Pedro Gracia <pedro@flumotion.com>

	* po/es.po: updated spanish translation.

2007-07-03  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* conf/managers/default/flows/looper.xml:
	* conf/managers/default/flows/ogg-test-theora.xml:
	* conf/managers/default/flows/porter.xml:
	Change examples to use new eater syntax.

2007-07-03  Andy Wingo  <wingo@pobox.com>

	* flumotion/manager/manager.py (Vishnu.getBundlerBasket): If the
	registry needs a rebuild, avoid scanning the directories twice.

	* flumotion/common/registry.py (RegistryDirectory.rebuildNeeded):